同程自动化二期 JDK17 注解修改